@@ -7,7 +7,7 @@
 	<website>http://www.coldtrick.com/</website>
 	<repository>https://github.com/ColdTrick/thewire_tools</repository>
 	<bugtracker>https://github.com/ColdTrick/thewire_tools/issues</bugtracker>
-	<copyright>(C) ColdTrick IT Solutions 2011 - 2011</copyright>
+	<copyright>(C) ColdTrick IT Solutions 2011 - 2013, 2015</copyright>
 	<license>GNU General Public License version 2</license>
  	
  	<requires>
